--- a/neighbourhoodApp/templates/registration/login.html
+++ b/neighbourhoodApp/templates/registration/login.html
@@ -1,42 +1,25 @@
 {%extends "../django_registration/base.html"%}
 {% load bootstrap3 %}
 {% block content %}
-<div class="container-fluid auth-pg">
-  <div class="row under-nav">
-      <div class="col-xs-12 col-lg-4"></div>            
-      <div class="col-xs-12 col-lg-4">
-        
-        <div class="jumbotron">
-          <div class="card">
-            <div class="card-body">
-              
-              <h2 class="text-center title-font">HoodMap</h2>  
-              <br>
-              <form  action="/accounts/login/" method="post">
-                {% csrf_token %}
-                {% bootstrap_form form%}
-    
-                <div class="form-group">
-                  <br>
-                  <input type="submit" class="btn btn-info form-control" value="Log In">
-                </div>
-    
-                <input type="hidden" name="next" value="{{next}}">
-    
-              </form>                         
-            </div>
-          </div> 
-          <br>
-          <div class="card">
-            <div class="card-body text-center">  
-              <h5 class="bolden text-center"><a href="/accounts/register">Register a neighbourhood here</a>.</h5>              
-            </div>
-          </div>         
-        </div>        
-  
-      </div>
-      <div class="col-xs-12 col-lg-4"></div>
+<div class="container">
+  {% if messages %}
+  {% for message in messages %}
+  <div class="alert alert-warning" role="alert">
+    <p>{{ message }} Please sign in.</a>.</p>
   </div>
+  {% endfor %}
+  {% endif %}
+  <h1 class="text-center title-font">MyNeighbourhood</h1>
+  <h2>LOGIN</h2>
+  <form action="/accounts/login/" method="post">
+    {% csrf_token %}
+    {% bootstrap_form form%}
+    <div class="form-group">
+      <br>
+      <input type="submit" class="btn btn-info" value="Log In">
+    </div>
+    <input type="hidden" name="next" value="{{next}}">
+  </form>
+  <p class="text-center">Don't have an account?<a href="/accounts/register"> Register here</a></p>
 </div>
-
 {% endblock %}
