--- a/neighbourhoodApp/templates/navbar.html
+++ b/neighbourhoodApp/templates/navbar.html
@@ -1,45 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-</head>
-<body>
-  <nav class="navbar navbar-inverse">
-    <div class="container-fluid">
+<div class="navbar navbar-inverse" role="navigation">
+  <div class="container-fluid">
       <div class="navbar-header">
-        <a class="navbar-brand" href="/">The Moringa Tribune</a>
+          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/"> MyNeighbourhood </a>
       </div>
-
-      <div class="col-sm-6 col-md-6">
-        {% if user.is_authenticated %}
-        <ul>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle btn btn-default" data-toggle="dropdown" role="button" aria-expanded="false">Account
-                      <span class="caret"></span>
-                  </a>
-            <ul class="dropdown-menu" role="menu">
-              <li>
-                <a href="/accounts/password/change">Change Password</a>
-              </li>
-              <li>
-                <a href="/logout">Logout</a>
-              </li>
-            </ul>
-          </li>
-        </ul>
-        {% else %}
-        <li>
-          <a class='btn btn-default' href="/accounts/login">Login</a>
-        </li>
-        <li>
-          <a class='btn btn-default' href="django_registration_register">Sign Up</a>
-        </li>
-
-        {% endif %}
+      <div class="navbar-collapse collapse">
+          <ul class="nav navbar-nav navbar-right">
+              <li><a href="/">Home</a></li>
+              <li><a href="/logout">Sign out</a></li>
+          </ul>
       </div>
-    </div>
-  </nav>
-</body>
-</html>
+  </div>
+</div>
